undid stuff, fixed about section spacing a bit

--- a/src/styles/About.less
+++ b/src/styles/About.less
@@ -9,12 +9,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 750px;
+  height: 100vh;
   padding: 20px;
 
   &.light {
     color: @font-color-primary-light;
-    background-color: #FF7D00;
   }
 
   &.dark {
@@ -26,17 +25,23 @@
   transition: background-color 0.3s ease, color 0.3s ease;
 
   /* Styles for responsive layout on mobile devices */
-  @media (max-width: @screen-tablet) {
+  @media (max-width: 767px) {
     flex-direction: column;
-    height: 500px;
+    height: auto;
   }
 }
 
-/* Styles for the left section - Name, title, all that*/
 .main-section {
   flex: 1;
+  max-width: 50%;
   display: flex;
   justify-content: center;
   flex-flow: column;
   align-items: center;
+  margin-top: 100px;
+
+  @media (max-width: @screen-tablet) {
+    max-width: 100%;
+    padding: 10px;
+  }
 }
