--- a/src/styles/Contact.less
+++ b/src/styles/Contact.less
@@ -10,7 +10,6 @@
   
     &.light {
       color: @font-color-primary-light;
-      background-color: #FFECD1;
     }
   
     &.dark {
