--- a/src/styles/Experience.less
+++ b/src/styles/Experience.less
@@ -6,18 +6,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 750px;
+    min-height: 100vh; // Make the component take up the whole screen
     padding: 20px;
-
-    @media (max-width: @screen-tablet) {
-      height: fit-content;
-    }
+  
     // Universal transition properties for all transitions
     transition: all 0.2s ease;
   
     &.light {
       color: #212529;
-      background-color: #FFECD1;
     }
   
     &.dark {
