--- a/src/styles/Skills.less
+++ b/src/styles/Skills.less
@@ -3,11 +3,6 @@
 //imports
 @import "variables.less";
 
-.skills-container {
-  &.light {
-    background-color: #FF7D00;
-  }
-}
 
 .container-lad {
   display: flex;
